# connectclaw

./: .env.template  .gitignore  README.md  config.toml.template  pyproject.toml
connectclaw/: commands.py  config.py  logging.py  main.py  onboard.py
connectclaw/agent/: agent.py  agent_loop.py  types.py
connectclaw/agent/harness/: agent_harness.py  compaction.py  messages.py  prompt_builder.py  session.py
connectclaw/agent/harness/prompts/: system.md
connectclaw/agent/harness/rag/: __init__.py  document_store.py  embedding_store.py  retriever.py  subsystem.py
connectclaw/channel/: base.py  feishu.py
connectclaw/coding/: coding_agent.py
connectclaw/coding/safety/: sandbox.py
connectclaw/coding/tools/: agents.py  bash.py  dynamic.py  hash_edit.py  hash_read.py  image_analyze.py  lightpanda.py  named_agents.py  read.py  scripted_tools.py  subagent.py  task.py  tool_context.py  web_search.py  write.py
connectclaw/coding/tools/builtin/: browser.tool.md
connectclaw/hashline/: __init__.py  apply.py  config.py  diff_util.py  format.py  guard.py  hash.py  merge.py  parse.py  snapshot.py
connectclaw/memory/: __init__.py  consolidator.py  extractor.py  prompts.py  retriever.py  store.py  subsystem.py  types.py
connectclaw/provider/: deepseek.py  embedding.py  rerank.py  stream.py  types.py
docs/: ARCHITECTURE.md
